fix: preserve Android 24 proxy compatibility